--- a/edu/my_wear_app/MyApp/wear/src/main/AndroidManifest.xml
+++ b/edu/my_wear_app/MyApp/wear/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     package="com.gdglima.examples.mywearapp" >
 
     <uses-feature android:name="android.hardware.type.watch" />
-
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
